Kill Aura - improved distance calculation to match server code